# fabrix

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/workflows/: publish.yml  tests.yml
src/fabrix/: context.py  evaluate.py
src/fabrix/functions/: __init__.py
tests/: conftest.py  test_context.py  test_evaluate.py  test_utils.py
tests/functions/: test_functions_collections.py  test_functions_conversions.py  test_functions_dates.py  test_functions_logical.py  test_functions_maths.py  test_functions_strings.py
